objects/Document_View_History_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Document_View_History__c</fullName>
        <label>Document View History</label>
        <referenceTo>Document_View_History__c</referenceTo>
        <relationshipLabel>Document View History Details</relationshipLabel>
        <relationshipName>Document_View_History_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Identifier__c</fullName>
        <label>Session Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document View History Detail</label>
    <nameField>
        <displayFormat>DVHD-{0000000000}</displayFormat>
        <label>Document View History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document View History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>